--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TomCityWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TomCityWebGL.data",
-        frameworkUrl: buildUrl + "/TomCityWebGL.framework.js",
-        codeUrl: buildUrl + "/TomCityWebGL.wasm",
+        dataUrl: buildUrl + "/TomCityWebGL.data.unityweb",
+        frameworkUrl: buildUrl + "/TomCityWebGL.framework.js.unityweb",
+        codeUrl: buildUrl + "/TomCityWebGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "TomnToms",
         productName: "TomCity",
